<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">FurView2</string>
    <string name="title_activity_fullscreen">Полноэкранный режим</string>
    <string name="title_activity_initial_screen">FurView2</string>
    <string name="title_activity_manual_proxy">Ручной ввод прокси</string>

    <string name="action_settings">Настройки</string>
    <string name="action_save">Сохранить</string>
    <string name="action_tags">Список тэгов</string>
    <string name="search_text">Поиск</string>

    <string name="use_proxy">Использовать прокси</string>
    <string name="imageName">Рисунок</string>
    <string name="no_connect_proxy">Проверьте подключение к Интернету</string>
    <string name="yes_connect_proxy">Прокси найден</string>
    <string name="disable_proxy">Прокси отключён</string>
    <string name="searching_proxy">Поиск прокси…</string>
    <string name="proxy_not_changed">Не удалось сменить прокси</string>
    <string name="setting_proxy">Настройка прокси…</string>
    <string name="checking_proxy">Проверка прокси…</string>
    <string name="not_good_proxy">Подходящего прокси не найдено</string>
    <string name="yes_list_proxies">Список прокси получен</string>
    <string name="success_set_manual_proxy">"Установлен прокси: "</string>
    <string name="fail_set_manual_proxy">"Прокси не установлен. Введите корректные данные."</string>

    <string name="proxies">Прокси</string>
    <string name="proxy1">AntiZapret</string>
    <string name="proxy2">FoxTools</string>
    <string name="proxy3">Пользовательский</string>
    <string name="proxy4">Без прокси</string>


    <string name="manual_address">123.456.789.012, example.com</string>
    <string name="manual_port">8080</string>
    <string name="button_set_proxy">Установить прокси</string>
    <string name="search_button_content_description">Поиск</string>
    <string name="action_search_help">Помощь</string>
    <string name="close_text">Закрыть</string>
    <string name="title_help_screen">Помощь</string>

    <string name="e621help"><![CDATA[
<b>cat dog</b>
<br>
Search for posts that are tagged with both cat and dog. Tags are separated by spaces.
<br>
<b>red_panda african_wild_dog</b>
<br>
Words within each tag are separated by underscores.
<br>
<b>~cat ~dog</b>
<br>
Search for posts that are tagged either cat or dog (or both).
<br>
<b>-chicken</b>
<br>
Search for posts that don\'t have the chicken tag.
<br>
<b>rating:safe</b>
<br>
<b>rating:questionable</b>
<br>
<b>rating:explicit</b>
<br>
Search for posts that are rated safe, questionable, or explicit. rating:s, rating:q, and rating:e also work.
<br>
For additional help visit <a href=\"https://e621.net/help/cheatsheet\">link</a>
    ]]></string>
    <string name="local_search_help">hi!</string>
    <string name="blacklist_help">
Чёрный список тегов представляет собой набор запрещённых тегов. Изображения содержащие данные теги не будут показаны при поиске.
\n\n
<b>Удаление тегов из списка:</b>\n
Чтобы удалить тег из чёрного списка коснитесь его долгим нажатием. Спустя 2 секунды тег будет удалён.\n\n
<b>Очистка списка:</b>\n
Чтобы очистить чёрный список выберете в меню пункт "Очистить список".
    </string>
    <string name="aliases_help">
Алиасы тегов дают возможность задавать псевдоним для существующих тэгов.\n\n
К примеру можно задать соответствие тегов tricky_crow и fast_swallow алиасу bird.
    </string>
    <string name="title_downloading_screen">Массовая загрузка</string>
    <string name="download">Скачать</string>
    <string name="imageboard_name">имиджборда</string>
    <string name="gallery_name">галерея</string>
    <string name="action_downloading">Массовое скачивание</string>
    <string name="num_of_images_hint"># изобр.</string>
    <string name="too_many_pics">Много изображений</string>
    <string name="too_many_pics_body">Множество изображений для закачивания может привести к исчерапнию памяти или длительной загрузке. Продолжить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_zero">Необходимо заполнить поле числа картинок ненулевым значением</string>
    <string name="images_downloaded">Изображений скачано:</string>
    <string name="tagsLabel">Тэги:</string>
    <string name="tags">Тэги</string>
    <string name="descriptionLabel">Описание:</string>
    <string name="description">Описание</string>
    <string name="info">Инфо</string>
    <string name="warning">Внимание</string>
    <string name="massDownloadExit">При выходе изображения будут докачиваться в фоновом режиме. В это время работа с базой данных приложения будет невозможна. Выйти?</string>
    <string name="at_least_one_source">Хотя бы один элемент должен быть выделен.</string>
    <string name="dateOfLoading">Изображение загружено:</string>

    <string name="blacklist_of_tags">Чёрный список тегов</string>
    <string name="action_blacklist">Чёрный список</string>
    <string name="add_button">Добавить</string>
    <string name="add_to_blacklist_list">Добавить в чёрный список</string>
    <string name="label_blacklist">Список нежелательных тегов\n (Долгое касание для удаления из списка)</string>
    <string name="label_blacklist2">Список нежелательных тегов (Долгое касание для удаления из списка)</string>
    <string name="need_input_tag">Введите тег</string>
    <string name="need_input_tag_blacklist">Неверно введён тег. Тег должен состоять из непрерывной строки символов. Слова разделяются символом "_" Пример: red_pokemon </string>
    <string name="to_blacklist_button">В чёрный список</string>
    <string name="add_to_search">Поиск по тегам</string>
    <string name="clear_blacklist">Очистить список</string>
    <string name="tags_is_added_to_blacklist">Выбранные теги добавлены в чёрный список</string>
    <string name="title_activity_aliases">Алиасы</string>
    <string name="add_link">Связать</string>
    <string name="tag">Тег</string>
    <string name="action_alias">Алиас</string>
    <string name="need_input_alias">Введите тег и алиас к нему. Тег не должен содержать пробелов.</string>
    <string name="alias">Алиас</string>
    <string name="another_aliases">Имеющиеся</string>
    <string name="skip">Пропустить</string>
    <string name="cancel">Отмена</string>
    <string name="need_input_alias_fullscreen">Не введён алиас к тегу.</string>
    <string name="too_much_number_aliases">"Слишком большое число. Максимальное количество страниц: "</string>
    <string name="source">Источник:</string>
    <string name="sources">Источники:</string>


</resources>
