<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_downloading"
        android:orderInCategory="100"
        android:title="@string/action_downloading"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_blacklist"
        android:orderInCategory="100"
        android:title="@string/action_blacklist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_aliases"
        android:orderInCategory="100"
        android:title="@string/title_activity_aliases"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_searchelp"
        android:orderInCategory="100"
        android:title="@string/action_search_help"
        app:showAsAction="never" />
</menu>
