<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FullscreenActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tags"
        android:orderInCategory="100"
        android:title="@string/action_tags"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_searchelp"
        android:orderInCategory="100"
        android:title="@string/action_searchelp"
        app:showAsAction="never" />

</menu>
