<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.furry.furview2.UI.ManualProxy">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manual_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:hint="@string/manual_address"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manual_port"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/manual_address"
        android:layout_alignEnd="@+id/manual_address"
        android:layout_below="@+id/manual_address"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/manual_port"
        android:numeric="integer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_set_proxy"
        android:id="@+id/ButtonSetManualProxy"
        android:layout_below="@+id/manual_port"
        android:layout_centerHorizontal="true" />
</RelativeLayout>